--- a/views/partials/modalVet.ejs
+++ b/views/partials/modalVet.ejs
@@ -1,46 +1,59 @@
 <!-- Modal agenda -->
-    <div class="modal" id="modal">
+<div class="modal" id="modal">
+  <div class="modal-container">
+    <header class="modal-header">
+      <h2>Consulta</h2>
+      <span class="modal-close" id="modalClose">&#10006;</span>
+    </header>
 
-      <div class="modal-container">
+    <form class="modal-form" id="form">
+      <input
+        type="text"
+        id="nome"
+        data-index="new"
+        class="modal-input"
+        placeholder="Nome do pet"
+        required
+      />
+      <input
+        type="text"
+        id="email"
+        class="modal-input"
+        placeholder="Codigo consulta"
+        required
+      />
+      <input
+        type="date"
+        id="date"
+        class="modal-input"
+        placeholder="Data"
+        required
+      />
+      <input
+        type="time"
+        id="time"
+        class="modal-input"
+        placeholder="Celular do Cliente"
+        required
+      />
+    </form>
 
-        <header class="modal-header">
+    <footer class="modal-footer">
+      <button class="btn-verde" id="salvar">Salvar</button>
+      <button class="btn-vermelho" id="cancelar">Cancelar</button>
+    </footer>
+  </div>
+</div>
+<!-- MODAL RELATORIO -->
+<div class="modal" id="modalRelatorio">
+  <div class="modal-container">
+    <header class="modal-header">
+      <h2>Consulta</h2>
+      <span class="modal-close" id="modalCloseRelatorio">&#10006;</span>
+    </header>
 
-          <h2>Consulta</h2>
-          <span class="modal-close" id="modalClose">&#10006;</span>
-
-        </header>
-
-        <form class="modal-form" id="form">
-          <input type="text" id="nome" data-index="new" class="modal-input" placeholder="Nome do pet" required>
-          <input type="text" id="email" class="modal-input" placeholder="Codigo consulta" required>
-          <input type="date" id="date" class="modal-input" placeholder="Data" required>
-          <input type="time" id="time" class="modal-input" placeholder="Celular do Cliente" required>
-        </form>
-
-        <footer class="modal-footer">
-          <button class="btn-verde" id="salvar">Salvar</button>
-          <button class="btn-vermelho" id="cancelar">Cancelar</button>
-        </footer>
-
-      </div>
+    <div>
+      <p id="modal-veterinario-diagnostico"></p>
     </div>
-     <!-- MODAL RELATORIO -->
-     <div class="modal" id="modalRelatorio">
-
-      <div class="modal-container">
-
-        <header class="modal-header">
-
-          <h2>Consulta</h2>
-          <span class="modal-close" id="modalCloseRelatorio">&#10006;</span>
-
-        </header>
-
-        <div>
-
-          <h1>Relatorio virá aqui</h1>
-          
-        </div>
-
-      </div>
-    </div>
+  </div>
+</div>
