crud da pagina cadastroPet

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,7 +40,7 @@
         <br>
         <label for="senha">Senha:</label>
         <br>
-        <input type="password" id="pass" name="password" minlength="8" required class="formularioLogin">
+        <input type="password" id="password" name="password" minlength="8" required class="formularioLogin">
         <p>* Senha deve conter no mínimo 8 caracteres.</p>
         <br>
 
