--- a/views/CadastroPet.ejs
+++ b/views/CadastroPet.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/stylesheets/headerClienteCadastrado.css" />
+  <link rel="stylesheet" href="/stylesheets/header.css" />
   <link rel="stylesheet" href="/stylesheets/footer.css" />
   <link rel="stylesheet" href="/stylesheets/CadastroPet.css" />
   <link rel="stylesheet" href="/stylesheets/modalVet.css" />
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bodyCadPet">
-  <%-include('./partials/header_cliente_cadastrado.ejs') %>
+  <%-include('./partials/header_cliente.ejs') %>
     <h3 class="H3CadPet">Lista de Pets</h3>
 
     <section class="row-CadPet">
@@ -35,7 +35,7 @@
     <div class="AdicionarPetbtn">
       <button type="button" class="AdicionarCadPet">+ Adicionar Pet</button>
     </div>
-    <h3 class="H3DadosCadPet">Dados do Pet</h3>
+    <h3 class="H3DadosCadPet">Consultas Marcadas</h3>
 
     <section class="Forms">
       <!-- FORMULARIO -->
@@ -60,43 +60,32 @@
         <input type="text" name="Pelagem" class="FormCadPet" id="dadosPet" />
 
         <label for="Sexo">Sexo:</label>
-        <select name="Sexo" class="FormCadPet" id="dadosPet" >
-          <option value="1">Masculino
-          </option>
-          <option value="2">Feminino
-          </option>
-        </select>
-
-        
+        <input type="text" name="Sexo" class="FormCadPet" id="dadosPet" />
 
     <div class="btn-editar">
       <button type="button" class="save-btn"> Salvar</button>
     </form>
     </div>
     </div>
-    <h3 class="H3DadosCadPet">Consultas Marcadas</h3>
-    <div class="Agendar-CadPet">
-      <button type="button" class="AgendarConsulta-btn">Nova Consulta</button>
-    </div>
+    <h3 class="H3DadosCadPet">Dados Pet</h3>
     <table class="TabelaCadPet">
       <tr>
         <th>Nome Pet</th>
         <th>Data</th>
         <th>Horário</th>
-        <th>Remarcar/Cancelar Consultas</th>
       </tr>
 
-      <% consultas.forEach((consulta)=>{ %>
+      <% for(agenda of agenda) { %>
         <tr>
           <td>
-            <%= consulta.pet.nome %>
+            <%= agenda.pet %>
           </td>
 
           <td>
-            <%= consulta.pet.data %>
+            <%= agenda.dt_agendado %>
           </td>
           <td>
-            <%= consulta.pet.horario %>
+            <%= agenda.horario %>
           </td>
 
 
@@ -105,10 +94,14 @@
             <button type="button" class="btn-vermelho">Cancelar</button>
           </td>
         </tr>
-        <% }) %>
+        <% } %>
     </table>
     </section>
     <h3 class="Historico-CadPet">Historico de Consultas</h3>
+
+    <div class="Agendar-CadPet">
+      <button type="button" class="AgendarConsulta-btn">Nova Consulta</button>
+    </div>
 
 
       <table class="TabelaCadPet">
@@ -119,26 +112,26 @@
               <th>Especialidade</th>
               <th>Editar/Excluir Consultas</th>
           </tr>
-          <% consultas.forEach((consulta)=>{ %>
-            <tr>
-                <td>
-                    <%= consultas.pet.nome %>
-                </td>
-                <td>
-                    <%= consultas.pet.data %>
-                </td>
-                <td>
-                    <%= consultas.veterinario.nome %>
-                </td>
-                <td>
-                    <%= consultas.especialidade %>
-                </td>
-                
-                <td><%=<button type="button" class="btn-verde" id="Relatorio" onclick="openModal(consultas.diagnostico)">Relátorio</button>%></td>
+          <% for(consultas of consultas) { %>
+              <tr>
+                  <td>
+                      <%= consultas.pet %>
+                  </td>
+                  <td>
+                      <%= consultas.data %>
+                  </td>
+                  <td>
+                      <%= consultas.medico %>
+                  </td>
+                  <td>
+                      <%= consultas.especialidade %>
+                  </td>
+                  
+                  <td><button class="btn-verde" type="button" id="Relatorio" >Relatorio</button>
 
-                
-            </tr>
-            <% }) %>
+                  
+              </tr>
+              <% } %>
       </table>
   </div>
    <%-include('./partials/modalCliente.ejs') %>
