--- a/public/stylesheets/modalVet.css
+++ b/public/stylesheets/modalVet.css
@@ -38,6 +38,38 @@
     z-index: 1;
 }
 
+.modal-agenda{
+    background-color: #bbefc37c;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: -1;
+}
+
+.modal-agenda.active {
+    opacity: 1;
+    z-index: 1;
+}
+
+.modalNovaConsulta{
+    background-color: #bbefc37c;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: -1;
+}
+
+.modalNovaConsulta.active {
+    opacity: 1;
+    z-index: 1;
+}
+
 .modal-container {
     display: flex;
     flex-direction: column;
