--- a/views/partials/modalVet.ejs
+++ b/views/partials/modalVet.ejs
@@ -7,35 +7,10 @@
     </header>
 
     <form class="modal-form" id="form">
-      <input
-        type="text"
-        id="nome"
-        data-index="new"
-        class="modal-input"
-        placeholder="Nome do pet"
-        required
-      />
-      <input
-        type="text"
-        id="email"
-        class="modal-input"
-        placeholder="Codigo consulta"
-        required
-      />
-      <input
-        type="date"
-        id="date"
-        class="modal-input"
-        placeholder="Data"
-        required
-      />
-      <input
-        type="time"
-        id="time"
-        class="modal-input"
-        placeholder="Celular do Cliente"
-        required
-      />
+      <input type="text" id="nome" data-index="new" class="modal-input" placeholder="Nome do pet" required />
+      <input type="text" id="email" class="modal-input" placeholder="Codigo consulta" required />
+      <input type="date" id="date" class="modal-input" placeholder="Data" required />
+      <input type="time" id="time" class="modal-input" placeholder="Celular do Cliente" required />
     </form>
 
     <footer class="modal-footer">
