--- a/views/CadastroPet.ejs
+++ b/views/CadastroPet.ejs
@@ -95,12 +95,15 @@
           </td>
         </tr>
         <% } %>
+        
     </table>
+    <div class="AgendarConsulta"><button type="button" class="AgendarConsulta-btn">+ Nova Consulta</button></div>
+    
+    
     </section>
     <h3 class="Historico-CadPet">Historico de Consultas</h3>
 
     <div class="Agendar-CadPet">
-      <button type="button" class="AgendarConsulta-btn">Nova Consulta</button>
     </div>
 
 
