--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -22,12 +22,12 @@
 
       <div class="align-row-userCad">
         <h3 class="user-cad"> Cadastro de usuario </h3>
-        <form method="POST">
+        <form method="POST" action="/cadastro" >
 
 
           <label for="name" class="nome">Nome:</label>
           <br>
-          <input type="text" id="name" name="name" required class="formularioCadastro">
+          <input type="text" id="name" name="nome" required class="formularioCadastro">
           <br>
 
           <label for="endereco">Endereço:</label>
@@ -37,7 +37,7 @@
 
           <label for="number">Telefone/Whatsapp:</label>
           <br>
-          <input type="number" id="number" name="number" required class="formularioCadastro">
+          <input type="number" id="number" name="telefone" required class="formularioCadastro">
           <br>
 
           <label for="email">E-mail:</label>
@@ -46,53 +46,30 @@
           <br>
           <label for="email">Senha:</label>
           <br>
-          <input type="password" id="pass" name="password" minlength="8" required class="formularioCadastro">
+          <input type="password" id="pass" name="senha" minlength="8" required class="formularioCadastro">
           <p>* Senha deve conter no mínimo 8 caracteres.</p>
           <br>
 
           <label>Sexo:</label>
           <br>
-          <select name="Genero" class="formularioCadastro">
-            <option value="1">Masculino
+          <select name="sexo" class="formularioCadastro">
+            <option value="Masculino">Masculino
             </option>
-            <option value="2">Feminino
+            <option value="Feminino">Feminino
             </option>
-            <option value="3">Outro
+            <option value="Outro">Outro
             </option>
           </select>
           <br>
           <label>Data de nascimento:</label>
           <br>
-          <input type="date" id="date" name="date" class="formularioCadastro">
+          <input type="date" id="date" name="nascimento" class="formularioCadastro">
           <br>
           <label>CPF:</label>
           <br>
           <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formularioCadastro">
-          <br>
-
-          <label>PET:</label>
-          <br>
-          <select name="tipo" class="formularioCadastro">
-            <option value="1">Cachorro
-            </option>
-            <option value="2">Gato
-          </select>
-          <br>
-          <label for="name">Nome do pet:</label>
-          <br>
-          <input type="text" id="namePet" name="name" required class="formularioCadastro">
-          <br>
-          <label for="idadePet">Idade do pet:</label>
-          <br>
-          <input type="text" id="idadePet" name="Idade" required class="formularioCadastro">
-          <br>
-
-
-
-
-          <br>
           <div class="btn-userCad">
-            <input type="submit" value="Entrar" class="btn-verde">
+            <button type="submit" value="Entrar" class="btn-verde">Cadastro</button>
             <button type="button" class="btn-vermelho">Limpar</button>
           </div>
           <br>
