--- a/views/partials/header_cliente.ejs
+++ b/views/partials/header_cliente.ejs
@@ -11,9 +11,7 @@
       <li><a href="/">Inicio</a></li>
 
       <li><a href="/abaVeterinario">Consultas</a></li>
-      <li><a href="/cadVet">Dados cadastro</a></li> 
-      
-
+      <li><a href="/cadastro">Dados cadastro</a></li>
     </ul>
   </nav>
   <div>
